fixed logo alignment on resize

--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
 		<div class="jumbotron">
 			<div class="stars"></div>
 			<div class="twinkling"></div>
-			<div id ="pearlHacks"><a href="index.html">Pearl Hacks<br></a>April 2nd - 3rd, 2016<br>University of North Carolina at Chapel Hill</div>
-			<div id="ariel" style="z-index: 5"><img src="images/ariel.png"></div>
+			<div id ="pearlHacks">
+        <p><a href="index.html">Pearl Hacks</a><br>
+        April 2nd - 3rd, 2016<br>
+        University of North Carolina at Chapel Hill</p>
+			  <img id="ariel" src="images/ariel.png">
+      </div>
 			<!--<div class="ariel" style="margin-top: -400px; z-index: 2; position: relative"></div>-->
 		</div>
 	</header>
