--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		</div>
 	</div>
 	<div class="container">
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-xs-12">
 				<div class="panel panel-primary hacknc-panel">
 					<div class="panel-heading">
@@ -157,7 +157,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<div id="faq" class="row">
 			<h2>Frequently asked questions</h2>
 			<div class="col-xs-12 col-sm-6 col-md-3">
@@ -249,6 +249,27 @@
 						<h3>Will I fit in?</h3>
 					</div>
 					<div class="panel-body">Yes, you will! Pearl Hacks, Women in Computer Science at UNCCH, and UNC Computer Science is committed to making computer science a more diverse field. We are working to make this Pearl Hacks the most supportive environment for women in tech, so come willing and ready to meet inspirational and passionate women excited to hack with you.
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="panel panel-primary hacknc-panel">
+					<div class="panel-heading">
+						<h3>Come Join the Fun at Pearl Hacks 2016</h3>
+					</div>
+					<div class="panel-body" id="2015pic">
+						<div class="row">
+							<div class="col-xs-12 col-md-12">
+								<div class="participant mid">
+								 <a href="./apply/participant.html" target="_blank">
+								 	<img class="img-responsive center-block contain" src="images/group.jpg" alt="Pearl Hacks Group"/>
+								 </a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
