--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 							<div class="col-xs-12 col-md-12">
 								<div class="participant mid">
 								 <a href="./apply/participant.html" target="_blank">
-								 	<img class="img-responsive center-block contain" src="images/group.jpg" alt="Pearl Hacks Group"/>
+								 	<img class="img-responsive center-block contain" src="images/group.JPG" alt="Pearl Hacks Group"/>
 								 </a>
 								</div>
 							</div>
