--- a/schedule/index.html
+++ b/schedule/index.html
@@ -104,12 +104,12 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12 col-lg-4">
+			<div class="col-sm-6">
 				<div class="panel panel-primary hacknc-panel">
 					<div class="panel-heading">
 						<h3>Saturday, April 2nd</h3>
 					</div>
-					<table class="table table-striped table-hover panel-body">
+					<table class="table table-striped table-hover panel-body" style="font-size: 1.2rem;">
 						<thead>
 							<tr>
 								<th>Start</th>
@@ -122,12 +122,12 @@
 					</table>
 				</div>
 			</div>
-			<div class="col-md-12 col-lg-4">
+			<div class="col-sm-6">
 				<div class="panel panel-primary hacknc-panel">
 					<div class="panel-heading">
 						<h3>Sunday, April 3rd</h3>
 					</div>
-					<table class="table table-striped table-hover panel-body">
+					<table class="table table-striped table-hover panel-body" style="font-size: 1.2rem;">
 						<thead>
 							<tr>
 								<th>Start</th>
