i wanna be strong like popeye

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -92,9 +92,11 @@
 	<script type="text/javascript" src="../js/navbar-offset.js"></script>
 	<div class="jumbotron">
 		<div class="container">
-			<h1>
+			<h2>
+			<strong>
 				Schedule for the weekend
-			</h1>
+			</strong>
+		</h2>
 			<p>Here are the awesome things we have planned for April 2 - 3, 2016</p>
 			<!-- <p><a href="../maps/"><span class="icon-preview"><i class="mdi-maps-directions"></i></span> Venue Maps</a>
 			</p>
