forgot about mobile

--- a/about/travel/index.html
+++ b/about/travel/index.html
@@ -27,6 +27,24 @@
 			font-size: 15px;
 			letter-spacing: 1px;
 		}
+
+		.parking a{
+		  color: #CE4E6D;
+		  font-family: 'Didact Gothic';
+		  font-size: 16px;
+		  font-weight: bold;
+		}
+
+		.parking a:hover{
+		  text-shadow: 1px 1px black;
+		  text-decoration: none;
+		}
+
+		.carpool li, .buspool li{
+		  font-family: 'Didact Gothic';
+		  font-size: inherit;
+		}
+
 	</style>
 </head>
 
@@ -154,7 +172,7 @@
 						<p style="font-size: 18px;">
 							Grant Amounts
 						</p>
-						<table style="text-align:center; width: 40%;">
+						<table style="text-align:center; width: 100%;">
 							<tbody>
 								<tr style="font-weight:bold"><td>Maximum one-way distance</td><td>Total grant amount</td></tr>
 								<tr><td>0 - 50 miles</td><td>$0</td></tr>
