finishing touches, sorry for inline css cos time is money

--- a/about/index.html
+++ b/about/index.html
@@ -18,6 +18,11 @@
 	<link type="text/css" rel="stylesheet" href="css/about.css" />
 	<title>About Pearl Hacks</title>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<style>
+		.dropdown-menu li a:hover{
+			color: black;
+		}
+	</style>
 </head>
 
 <body>
