--- a/about/rules/index.html
+++ b/about/rules/index.html
@@ -20,6 +20,18 @@
 	<!--Import Pearl Hacks overrides-->
 	<link type="text/css" rel="stylesheet" href="../../css/pearlhacks.css" />
 	<link type="text/css" rel="stylesheet" href="../../css/home.css" />
+	<style>
+	.panel-body a{
+		color: #CE4E6D;
+		font-family: "Didact Gothic";
+	}
+
+	.panel-body a:hover{
+		color: #CE4E6D;
+		text-decoration: none;
+		font-weight: bold;
+	}
+	</style>
 </head>
 
 <body>
