--- a/about/travel/index.html
+++ b/about/travel/index.html
@@ -172,7 +172,7 @@
 						<p style="font-size: 18px;">
 							Grant Amounts
 						</p>
-						<table style="text-align:center; width: 100%;">
+						<table style="text-align:center;">
 							<tbody>
 								<tr style="font-weight:bold"><td>Maximum one-way distance</td><td>Total grant amount</td></tr>
 								<tr><td>0 - 50 miles</td><td>$0</td></tr>
