--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
 	<link type="text/css" rel="stylesheet" href="css/pearlhacks.css" />
 	<link type="text/css" rel="stylesheet" href="css/home.css" />
 	<link type="text/css" rel="stylesheet" href="css/stars.css" />
+	<style>
+	.panel-body a{
+		color: #CE4E6D;
+		font-family: "Didact Gothic";
+	}
+
+	.panel-body a:hover{
+		color: #CE4E6D;
+		text-decoration: none;
+		font-weight: bold;
+	}
+	</style>
 </head>
 
 <body>
