--- a/learn/index.html
+++ b/learn/index.html
@@ -20,6 +20,19 @@
 	<!--Import Pearl Hacks overrides-->
 	<link type="text/css" rel="stylesheet" href="../css/pearlhacks.css" />
 	<link type="text/css" rel="stylesheet" href="../css/home.css" />
+	<style>
+		.panel-body a{
+			color: #CE4E6D;
+			font-family: "Didact Gothic";
+			font-size:19px;
+		}
+
+		.panel-body a:hover{
+			color: #CE4E6D;
+			text-decoration: none;
+			font-weight: bold;
+		}
+	</style>
 </head>
 
 <body>
@@ -229,7 +242,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-6">
+			<!-- <div class="col-xs-12 col-md-6">
 				<div class="panel panel-primary hacknc-panel">
 					<div class="panel-heading">
 						<h2>Windows Apps</h2>
@@ -246,7 +259,7 @@
 						</ul>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 		<!--
 		<div class="row">
