wrap schedule in mobile

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -111,7 +111,7 @@
 					<div class="panel-heading">
 						<h3>Saturday, April 2nd</h3>
 					</div>
-					<table class="table table-striped table-hover panel-body" style="font-size: 1.2rem;">
+					<table class="table table-striped table-hover panel-body" style="font-size: 1.2rem; word-wrap:break-word;">
 						<thead>
 							<tr>
 								<th>Start</th>
@@ -129,7 +129,7 @@
 					<div class="panel-heading">
 						<h3>Sunday, April 3rd</h3>
 					</div>
-					<table class="table table-striped table-hover panel-body" style="font-size: 1.2rem;">
+					<table class="table table-striped table-hover panel-body" style="font-size: 1.2rem; word-wrap:break-word;">
 						<thead>
 							<tr>
 								<th>Start</th>
