--- a/schedule/index.html
+++ b/schedule/index.html
@@ -106,7 +106,7 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-xs-4">
 				<div class="panel panel-primary hacknc-panel">
 					<div class="panel-heading">
 						<h3>Saturday, April 2nd</h3>
@@ -124,7 +124,7 @@
 					</table>
 				</div>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-xs-4">
 				<div class="panel panel-primary hacknc-panel">
 					<div class="panel-heading">
 						<h3>Sunday, April 3rd</h3>
