welcome font size and schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -21,6 +21,17 @@
 	<!--Import Pearl Hacks overrides-->
 	<link type="text/css" rel="stylesheet" href="../css/pearlhacks.css" />
 	<link type="text/css" rel="stylesheet" href="../css/home.css" />
+	<style>
+		table td{
+		word-break: break-all;
+	 /* Non standard for webkit */
+	 	word-break: break-word;
+	 	-webkit-hyphens: auto;
+	 	-moz-hyphens: auto;
+	 	-ms-hyphens: auto;
+ 		hyphens: auto;
+		}
+	</style>
 </head>
 
 <body>
