--- a/index.html
+++ b/index.html
@@ -214,8 +214,9 @@
 					<div class="panel-heading">
 						<h3>Registration Details</h3>
 					</div>
-					<div class="panel-body">Registration decisions will be announced on February 28th. Afterwards, we will review applications on a case-by-case basis.
-					</div>
+					<div class="panel-body">
+						Emails confirming registration details will be sent on February 28th.  If you register after March 15th, we can not guarantee you will receive a free Pearl Hacks shirt and food will be first delegated to those who registered early. Registration up until the date of the event is more than welcomed because nothing should keep you from this opportunity!
+ 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
@@ -364,7 +365,6 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 text-right hacknc-footer">
-				<span>Pearl Hacks 2016 - Find us on <a href="https://www.github.com/madipfaff/PearlHacks16">GitHub</a></span>
 			</div>
 		</div>
 	</div>
@@ -379,9 +379,6 @@
 					<ol>
 						<li>Type this into your terminal: <code>telnet towel.blinkenlights.nl</code></li>
 						<!-- WARNING DO NOT type sudo rm -rf / -->
-						<li>Visit fall2014.hacknc.com</li>
-						<li>Type doge</li>
-						<li><a href="http://fall2014.hacknc.com">???</a>
 						</li>
 					</ol>
 				</div>
