--- a/schedule/index.html
+++ b/schedule/index.html
@@ -117,7 +117,7 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-6">
+			<div class="col-xs-6">
 				<div class="panel panel-primary hacknc-panel">
 					<div class="panel-heading">
 						<h3>Saturday, April 2nd</h3>
@@ -135,7 +135,7 @@
 					</table>
 				</div>
 			</div>
-			<div class="col-lg-6">
+			<div class="col-xs-6">
 				<div class="panel panel-primary hacknc-panel">
 					<div class="panel-heading">
 						<h3>Sunday, April 3rd</h3>
