--- a/schedule/index.html
+++ b/schedule/index.html
@@ -22,14 +22,15 @@
 	<link type="text/css" rel="stylesheet" href="../css/pearlhacks.css" />
 	<link type="text/css" rel="stylesheet" href="../css/home.css" />
 	<style>
-		table td{
-		word-break: break-all;
-	 /* Non standard for webkit */
-	 	word-break: break-word;
-	 	-webkit-hyphens: auto;
-	 	-moz-hyphens: auto;
-	 	-ms-hyphens: auto;
- 		hyphens: auto;
+		table{
+			font-size: 12px;
+			word-break: break-all;
+		 /* Non standard for webkit */
+		 	word-break: break-word;
+		 	-webkit-hyphens: auto;
+		 	-moz-hyphens: auto;
+		 	-ms-hyphens: auto;
+	 		hyphens: auto;
 		}
 	</style>
 </head>
@@ -117,7 +118,7 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-6">
+			<div class="col-lg-6">
 				<div class="panel panel-primary hacknc-panel">
 					<div class="panel-heading">
 						<h3>Saturday, April 2nd</h3>
@@ -135,7 +136,7 @@
 					</table>
 				</div>
 			</div>
-			<div class="col-xs-6">
+			<div class="col-lg-6">
 				<div class="panel panel-primary hacknc-panel">
 					<div class="panel-heading">
 						<h3>Sunday, April 3rd</h3>
