favicons for everyone

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
 					<div class="panel-body">
 						Emails confirming registration details will be sent on February 28th.  If you register after March 15th, we can not guarantee you will receive a free Pearl Hacks shirt and food will be first delegated to those who registered early. Registration up until the date of the event is more than welcomed because nothing should keep you from this opportunity!
  					</div>
+
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
@@ -261,7 +262,7 @@
 					<div class="panel-heading">
 						<h3>Will I fit in?</h3>
 					</div>
-					<div class="panel-body">Yes, you will! Pearl Hacks, Women in Computer Science at UNCCH, and UNC Computer Science is committed to making computer science a more diverse field. We are working to make this Pearl Hacks the most supportive environment for women in tech, so come willing and ready to meet inspirational and passionate women excited to hack with you.
+					<div class="panel-body">Yes, you will! Pearl Hacks, Women in Computer Science at UNCCH, and UNC Computer Science are committed to making computer science a more diverse field. We are working to make this Pearl Hacks the most supportive environment for women in tech, so come willing and ready to meet inspirational and passionate women excited to hack with you.
 					</div>
 				</div>
 			</div>
