--- a/learn/index.html
+++ b/learn/index.html
@@ -8,11 +8,12 @@
 	<meta property="og:title" content="Pearl Hacks - Learn new things" />
 	<meta property="og:site_name" content="Pearl Hacks 2016" />
 	<meta property="og:url" content="http://pearlhacks.com/learn/" />
+	<meta property="og:image" content="http://pearlhacks.com/ariel.png" />
 	<meta property="og:description" content="What can YOU do with computer science? Find out at Pearl Hacks." />
 	<meta property="og:updated_time" content="1439328118" />
 	<title>Learning at Pearl Hacks</title>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<link rel="icon" href="../../images/ariel.png" type="image/png">
+	<link rel="icon" href="../images/ariel.png" type="image/png">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 	<!--Import bootstrap.css-->
 	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
