mobile schedule btter stop acting up

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -23,14 +23,16 @@
 	<link type="text/css" rel="stylesheet" href="../css/home.css" />
 	<style>
 		table{
-			font-size: 12px;
-			word-break: break-all;
 		 /* Non standard for webkit */
 		 	word-break: break-word;
 		 	-webkit-hyphens: auto;
 		 	-moz-hyphens: auto;
 		 	-ms-hyphens: auto;
 	 		hyphens: auto;
+		}
+
+		table td{
+			font-size: 11px;
 		}
 	</style>
 </head>
