--- a/schedule/index.html
+++ b/schedule/index.html
@@ -30,9 +30,12 @@
 		 	-ms-hyphens: auto;
 	 		hyphens: auto;
 		}
+		table thead tr th{
+			font-size: 12px;
+		}
 
 		table td{
-			font-size: 11px;
+			font-size: 10px;
 		}
 	</style>
 </head>
@@ -130,7 +133,7 @@
 							<tr>
 								<th>Start</th>
 								<th>End</th>
-								<th>Location</th>
+								<th>Venue</th>
 								<th>Event</th>
 							</tr>
 						</thead>
@@ -148,7 +151,7 @@
 							<tr>
 								<th>Start</th>
 								<th>End</th>
-								<th>Location</th>
+								<th>Venue</th>
 								<th>Event</th>
 							</tr>
 						</thead>
