got google analytics from maegan

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -128,7 +129,7 @@
 		<div id="content" class="container">
 			<div id="welcome" class="row">
 				<div class="col-xs-12 col-md-8">
-					<h2 style ="text-shadow: 1px 1px white"><strong>Welcome to Pearl Hacks!</strong></h2>
+					<h2><strong>Welcome to Pearl Hacks!</strong></h2>
 					<p>Pearl Hacks is an all-female hackathon aimed towards creating an encouraging environment for women of all skill levels to pursue their interests in technology. Hosted at the University of North Carolina at Chapel Hill, for 24 hours you will build projects with peers and mentors about topics that spark your interests. Whether you are a master in heels and Java or you have yet to write your first "Hello World" program, we welcome you all. Look forward to participating in workshops for aspiring and experienced programmers. If advancing your knowledge of computer science isn't enough, we'll have plenty of free food, free shirts, and free swag. What's stopping you? Get ready for a weekend with phenomenal women you will never forget at Pearl Hacks! </p>
 				</div>
 				<div class="col-xs-12 col-md-4">
@@ -215,7 +216,7 @@
 						<h3>Registration Details</h3>
 					</div>
 					<div class="panel-body">
-						Emails confirming registration details will be sent on February 28th.  If you register after March 15th, we can not guarantee you will receive a free Pearl Hacks shirt and food will be first delegated to those who registered early. Registration up until the date of the event is more than welcomed because nothing should keep you from this opportunity!
+						Emails confirming registration details will be sent on February 28th.  If you register after March 15th, we can not guarantee you will receive a free Pearl Hacks shirt and food will be first delegated to those who registered early. Registration up until the date of the event is more than welcomed because nothing should keep you from this opportunity!
  					</div>
 
 				</div>
@@ -272,15 +273,15 @@
 			<div class="col-xs-12">
 				<div class="panel panel-primary hacknc-panel">
 					<div class="panel-heading">
-						<h3>Come Join the Fun at Pearl Hacks 2016</h3>
+						<a href="./apply/participant.html" target="_blank">
+							<h3>Come Join the Fun at Pearl Hacks 2016</h3>
+						</a>
 					</div>
 					<div class="panel-body" id="2015pic">
 						<div class="row">
 							<div class="col-xs-12 col-md-12">
 								<div class="participant mid">
-								 <a href="./apply/participant.html" target="_blank">
 								 	<img class="img-responsive center-block contain" src="images/group.JPG" alt="Pearl Hacks Group"/>
-								 </a>
 								</div>
 							</div>
 						</div>
@@ -398,15 +399,14 @@
 	<script type="text/javascript" src="js/pearlhacks.js"></script>
 	<script type="text/javascript" src="js/home.js"></script>
 	<!-- Google Analytics -->
-	<script type="text/javascript">
-		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-	</script>
-	<script type="text/javascript">
-		try {
-			var pageTracker = _gat._getTracker("UA-61641591-1");
-			pageTracker._trackPageview();
-		} catch (err) {}
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-74100181-1', 'auto');
+	  ga('send', 'pageview');
 	</script>
 </body>
 
