--- a/index.html
+++ b/index.html
@@ -136,100 +136,100 @@
 			</div>
 		</div>
 	</div>
-	<div class="container">
+	<div class="container" style="width:100%">
 		<div id="faq" class="row">
 			<h2>Frequently asked questions</h2>
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
 						<h3>Can I attend?</h3>
 					</div>
-					<div class="panel-body">High school, undergraduate, and graduate students are welcome to hack. Professionals are welcome to join as mentors, sponsors, or lecturers. Pearl Hacks welcomes all skill levels to participate, for this is the perfect environment to come and learn what you can do with a little bit of code.
+					<div class="panel-body FAQ_hover_text">High school, undergraduate, and graduate students are welcome to hack. Professionals are welcome to join as mentors, sponsors, or lecturers. Pearl Hacks welcomes all skill levels to participate, for this is the perfect environment to come and learn what you can do with a little bit of code.
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
 						<h3>What is it?</h3>
 					</div>
-					<div class="panel-body">A weekend of fun and learning. You'll become a better programmer, meet fantastic ladies, and make cool stuff. You'll also have the chance to learn a lot and get loads of free stuff!
+					<div class="panel-body FAQ_hover_text">A weekend of fun and learning. You'll become a better programmer, meet fantastic ladies, and make cool stuff. You'll also have the chance to learn a lot and get loads of free stuff!
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
 						<h3>Will there be food?</h3>
 					</div>
-					<div class="panel-body">Don’t worry. We’ll provide five full meals throughout the hackathon and there will be plenty of snacks in between. You won’t be hungry.
+					<div class="panel-body FAQ_hover_text">Don’t worry. We’ll provide five full meals throughout the hackathon and there will be plenty of snacks in between. You won’t be hungry.
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
 						<h3>But I don't know how to code..</h3>
 					</div>
-					<div class="panel-body">Don't you worry about a thing. We will have workshops for individuals of all skill levels, and mentors whom are specifically at Pearl Hacks to help you when you get stuck. Plus, you'll have 500 other women rooting for you and encouraging you every step of the way.
+					<div class="panel-body FAQ_hover_text">Don't you worry about a thing. We will have workshops for individuals of all skill levels, and mentors whom are specifically at Pearl Hacks to help you when you get stuck. Plus, you'll have 500 other women rooting for you and encouraging you every step of the way.
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
 						<h3>Can I use old code?</h3>
 					</div>
-					<div class="panel-body">You may use all the publicly available code and APIs that you want but the code you will be judged on at the end of the hackathon must be new.
+					<div class="panel-body FAQ_hover_text">You may use all the publicly available code and APIs that you want but the code you will be judged on at the end of the hackathon must be new.
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
 						<h3>Registration Details</h3>
 					</div>
-					<div class="panel-body">
+					<div class="panel-body FAQ_hover_text">
 						Emails confirming registration details will be sent on February 28th.  If you register after March 15th, we can not guarantee you will receive a free Pearl Hacks shirt and food will be first delegated to those who registered early. Registration up until the date of the event is more than welcomed because nothing should keep you from this opportunity!
  					</div>
 
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
 						<h3>What about sleep?</h3>
 					</div>
-					<div class="panel-body">Bring your own pillow and bedding. There will be a sleeping space available Friday and Saturday nights. If you'd prefer a hotel room, the Carolina Inn is only 200 feet away (although very expensive).
+					<div class="panel-body FAQ_hover_text">Bring your own pillow and bedding. There will be a sleeping space available Friday and Saturday nights. If you'd prefer a hotel room, the Carolina Inn is only 200 feet away (although very expensive).
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
 						<h3>Hardware?</h3>
 					</div>
-					<div class="panel-body">MLH is providing the full hardware lab. In addition we will have soldering and assorted components, Arduinos, Raspberry Pis, and more Pebbles than you can wear on four limbs...
+					<div class="panel-body FAQ_hover_text">MLH is providing the full hardware lab. In addition we will have soldering and assorted components, Arduinos, Raspberry Pis, and more Pebbles than you can wear on four limbs...
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
 						<h3>What about my team?</h3>
 					</div>
-					<div class="panel-body">Be yourself; sign up as an individual! You can create your team with whoever you like, up to four people, once you arrive. Also, view the event page on Facebook to connect with fabulous ladies that are attending Pearl Hacks and looking for a team.
+					<div class="panel-body FAQ_hover_text">Be yourself; sign up as an individual! You can create your team with whoever you like, up to four people, once you arrive. Also, view the event page on Facebook to connect with fabulous ladies that are attending Pearl Hacks and looking for a team.
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
 						<h3>Travel costs?</h3>
 					</div>
-					<div class="panel-body">See <a href="about/travel/index.html">our travel policy</a> for more information.
+					<div class="panel-body FAQ_hover_text">See <a href="about/travel/index.html">our travel policy</a> for more information.
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
 						<h3>How do I get in?</h3>
 					</div>
-					<div class="panel-body">Anyone can attend Pearl Hacks. Just thoughtfully fill out the application. The only limitation is the amount of food we can serve over the weekend, but if you register early.. come hungry.
+					<div class="panel-body FAQ_hover_text">Anyone can attend Pearl Hacks. Just thoughtfully fill out the application. The only limitation is the amount of food we can serve over the weekend, but if you register early.. come hungry.
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
 						<h3>Will I fit in?</h3>
 					</div>
-					<div class="panel-body">Yes, you will! Pearl Hacks, Women in Computer Science at UNCCH, and UNC Computer Science are committed to making computer science a more diverse field. We are working to make this Pearl Hacks the most supportive environment for women in tech, so come willing and ready to meet inspirational and passionate women excited to hack with you.
+					<div class="panel-body FAQ_hover_text">Yes, you will! Pearl Hacks, Women in Computer Science at UNCCH, and UNC Computer Science are committed to making computer science a more diverse field. We are working to make this Pearl Hacks the most supportive environment for women in tech, so come willing and ready to meet inspirational and passionate women excited to hack with you.
 					</div>
 				</div>
 			</div>
