--- a/about/travel/index.html
+++ b/about/travel/index.html
@@ -62,35 +62,43 @@
 				</div>
 				<div class="collapse navbar-collapse" id="navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li id="about-menu" class="dropdown">
+						<li>
             			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 							About <span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Travel</a></li>
+							<li><a href="./index.html">Travel</a></li>
 							<li><a href="../rules/index.html">Guidelines</a></li>
-							<!-- <li><a href="about/prizes">Prizes</a></li>-->
+							<li><a href="../maps/index.html">Maps</a></li>
+							<li><a href="../prizes/index.html">Prizes</a></li>
 						</ul>
 						</li>
-						<li id="about-menu" class="dropdown">
+						<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 								Register<span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu">
-							<li><a href="../../apply/participant.html" target="_blank">Participant</a></li>
-							<li><a href="../../apply/volunteer.html" target="_blank">Volunteer</a></li>
-							<li><a href="../../apply/mentor.html" target="_blank">Mentor</a></li>
+							<li><a href="./apply/participant.html" target="_blank">Participant</a></li>
+							<li><a href="./apply/volunteer.html" target="_blank">Volunteer</a></li>
+							<li><a href="./apply/mentor.html" target="_blank">Mentor</a></li>
 						</ul>
 						</li>
 						<li>
-							<a href="../../learn/index.html">Learn</a>
+							<a href="./learn/index.html">Learn</a>
 						</li>
 						<li>
-							<a href="../../schedule/index.html">Schedule</a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							Schedule <span class="caret"></span>
+						</a>
+							<ul class="dropdown-menu">
+							<li><a href="#">Events</a></li>
+							<li><a href="#">Workshops</a></li>
+							<li><a href="#">Tech Talks</a></li>
+						</ul>
 						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li id="side-menu" class="dropdown">
+						<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More... <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li>
