--- a/index.html
+++ b/index.html
@@ -41,16 +41,6 @@
 </head>
 
 <body>
-	<header class="full-height">
-		<div class="jumbotron">
-			<div id ="pearlHacks">
-        <p><a href="index.html">Pearl Hacks</a><br>
-        April 2nd - 3rd, 2016<br>
-        University of North Carolina at Chapel Hill</p>
-			  <img id="ariel" src="images/ariel.png">
-      </div>
-		</div>
-	</header>
 	<div id="nav-wrapper">
 		<nav id="nav" class="navbar navbar-default pearlhacks-navbar">
 			<div class="container-fluid">
@@ -65,18 +55,18 @@
 				</div>
 				<div class="collapse navbar-collapse" id="navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li id="about-menu" class="dropdown">
+						<li>
             			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 							About <span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
 							<li><a href="./about/travel/index.html">Travel</a></li>
 							<li><a href="./about/rules/index.html">Guidelines</a></li>
-							<!--<li><a href="./maps/index.html">Maps</a></li>-->
-							<!--<li><a href="./about/prizes/index.html">Prizes</a></li>-->
+							<li><a href="./maps/index.html">Maps</a></li>
+							<li><a href="./about/prizes/index.html">Prizes</a></li>
 						</ul>
 						</li>
-						<li id="about-menu" class="dropdown">
+						<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 								Register<span class="caret"></span>
 							</a>
@@ -90,11 +80,18 @@
 							<a href="./learn/index.html">Learn</a>
 						</li>
 						<li>
-							<a href="./schedule/index.html">Schedule</a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							Schedule <span class="caret"></span>
+						</a>
+							<ul class="dropdown-menu">
+							<li><a href="#">Events</a></li>
+							<li><a href="#">Workshops</a></li>
+							<li><a href="#">Tech Talks</a></li>
+						</ul>
 						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li id="side-menu" class="dropdown">
+						<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More... <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li>
@@ -111,6 +108,16 @@
 			</div>
 		</nav>
 	</div>
+	<header class="full-height">
+		<div class="jumbotron">
+			<div id ="pearlHacks">
+        <p><a href="index.html">Pearl Hacks</a><br>
+        April 2nd - 3rd, 2016<br>
+        University of North Carolina at Chapel Hill</p>
+			  <img id="ariel" src="images/ariel.png">
+      </div>
+		</div>
+	</header>
 	<div class="jumbotron">
 		<div id="content" class="container">
 			<div id="welcome" class="row">
