--- a/schedule/index.html
+++ b/schedule/index.html
@@ -41,7 +41,8 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-default pearlhacks-navbar navbar-fixed-top">
+	<div id="nav-wrapper">
+		<nav id="nav" class="navbar navbar-default pearlhacks-navbar">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
@@ -50,39 +51,47 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="../index.html">Pearl Hacks <span class="sr-only">(current)</span></a>
+					<a class="navbar-brand" href="index.html">Pearl Hacks <span class="sr-only">(current)</span></a>
 				</div>
 				<div class="collapse navbar-collapse" id="navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li id="about-menu" class="dropdown">
+						<li>
             			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 							About <span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
-							<li><a href="../about/travel/index.html">Travel</a></li>
-							<li><a href="../about/rules/index.html">Guidelines</a></li>
-							<!--<li><a href="../prizes/index.html">Prizes</a></li>-->
+							<li><a href="./about/travel/index.html">Travel</a></li>
+							<li><a href="./about/rules/index.html">Guidelines</a></li>
+							<li><a href="./maps/index.html">Maps</a></li>
+							<li><a href="./about/prizes/index.html">Prizes</a></li>
 						</ul>
 						</li>
-						<li id="about-menu" class="dropdown">
+						<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 								Register<span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu">
-							<li><a href="../apply/participant.html" target="_blank">Participant</a></li>
-							<li><a href="../apply/volunteer.html" target="_blank">Volunteer</a></li>
-							<li><a href="../apply/mentor.html" target="_blank">Mentor</a></li>
+							<li><a href="./apply/participant.html" target="_blank">Participant</a></li>
+							<li><a href="./apply/volunteer.html" target="_blank">Volunteer</a></li>
+							<li><a href="./apply/mentor.html" target="_blank">Mentor</a></li>
 						</ul>
 						</li>
 						<li>
-							<a href="../learn/index.html">Learn</a>
+							<a href="./learn/index.html">Learn</a>
 						</li>
 						<li>
-							<a href="#">Schedule</a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							Schedule <span class="caret"></span>
+						</a>
+							<ul class="dropdown-menu">
+							<li><a href="#">Events</a></li>
+							<li><a href="#">Workshops</a></li>
+							<li><a href="#">Tech Talks</a></li>
+						</ul>
 						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li id="side-menu" class="dropdown">
+						<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More... <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li>
@@ -98,6 +107,7 @@
 				</div>
 			</div>
 		</nav>
+	</div>
 	<script type="text/javascript" src="../js/navbar-offset.js"></script>
 	<div class="jumbotron">
 		<div class="container">
