finished navbar changes, all pages created

--- a/about/maps/index.html
+++ b/about/maps/index.html
@@ -67,9 +67,9 @@
 							About <span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
-							<li><a href="">Travel</a></li>
+							<li><a href="../travel/index.html">Travel</a></li>
 							<li><a href="../rules/index.html">Guidelines</a></li>
-							<li><a href="../maps/index.html">Maps</a></li>
+							<li><a href="">Maps</a></li>
 							<li><a href="../prizes/index.html">Prizes</a></li>
 						</ul>
 						</li>
