--- a/about/rules/index.html
+++ b/about/rules/index.html
@@ -47,17 +47,18 @@
 				</div>
 				<div class="collapse navbar-collapse" id="navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li id="about-menu" class="dropdown">
+						<li>
             			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 							About <span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
 							<li><a href="../travel/index.html">Travel</a></li>
-							<li><a href="#">Guidelines</a></li>
-							<!-- <li><a href="about/prizes">Prizes</a></li>-->
+							<li><a href="">Guidelines</a></li>
+							<li><a href="../maps/index.html">Maps</a></li>
+							<li><a href="../prizes/index.html">Prizes</a></li>
 						</ul>
 						</li>
-						<li id="about-menu" class="dropdown">
+						<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 								Register<span class="caret"></span>
 							</a>
@@ -71,11 +72,18 @@
 							<a href="../../learn/index.html">Learn</a>
 						</li>
 						<li>
-							<a href="../../schedule/index.html">Schedule</a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							Schedule <span class="caret"></span>
+						</a>
+							<ul class="dropdown-menu">
+							<li><a href="../schedule/events/index.html">Events</a></li>
+							<li><a href="../schedule/workshops/index.html">Workshops</a></li>
+							<li><a href="../schedule/techtalks/index.html">Tech Talks</a></li>
+						</ul>
 						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li id="side-menu" class="dropdown">
+						<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More... <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li>
