--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="./about/travel/index.html">Travel</a></li>
 							<li><a href="./about/rules/index.html">Guidelines</a></li>
-							<li><a href="./maps/index.html">Maps</a></li>
+							<li><a href="./about/maps/index.html">Maps</a></li>
 							<li><a href="./about/prizes/index.html">Prizes</a></li>
 						</ul>
 						</li>
