fixing header information

--- a/about/prizes/index.html
+++ b/about/prizes/index.html
@@ -5,18 +5,47 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="HackNC - What can you win?" />
-	<meta property="og:site_name" content="HackNC 2015" />
-  <meta property="og:url" content="http://hacknc.com/about/prizes" />
-	<meta property="og:description" content="HackNC prizes." />
-	<meta property="og:image" content="http://hacknc.com/images/facebookPreview.png" />
+  <meta property="og:title" content="Pearl Hacks - Prizes" />
+	<meta property="og:site_name" content="Pearl Hacks 2017" />
+  <meta property="og:url" content="http://pearlhacks.com/about/prizes" />
+	<meta property="og:description" content="Pearl Hacks prizes information." />
 	<meta property="og:updated_time" content="1439328118" />
-	<link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="../../ariel.png" type="image/x-icon" />
+	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+	<title>Prizes for Pearl Hacks</title>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<link rel="icon" href="../../images/ariel.png" type="image/png">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+	<!--Import bootstrap.css-->
 	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 	<link type="text/css" rel="stylesheet" href="../../css/material-fullpalette.min.css" />
-	<link type="text/css" rel="stylesheet" href="../../css/hacknc.css" />
-	<title>Pearl Hacks Prizes</title>
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<!--Import Pearl Hacks overrides-->
+	<link type="text/css" rel="stylesheet" href="../../css/pearlhacks.css" />
+	<link type="text/css" rel="stylesheet" href="../../css/home.css" />
+	<style>
+		p{
+			font-size: 15px;
+			letter-spacing: 1px;
+		}
+
+		.parking a{
+		  color: #CE4E6D;
+		  font-family: 'Didact Gothic';
+		  font-size: 16px;
+		  font-weight: bold;
+		}
+
+		.parking a:hover{
+		  text-shadow: 1px 1px black;
+		  text-decoration: none;
+		}
+
+		.carpool li, .buspool li{
+		  font-family: 'Didact Gothic';
+		  font-size: inherit;
+		}
+
+	</style>
 </head>
 
 <body>
