--- a/about/rules/index.html
+++ b/about/rules/index.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="Pearl Hacks - Code of conduct" />
-	<meta property="og:site_name" content="Pearl Hacks 2016" />
-  <meta property="og:url" content="http://pearlhacks.com/about/rules.html" />
+	<meta property="og:site_name" content="Pearl Hacks 2017" />
+  <meta property="og:url" content="http://pearlhacks.com/about/rules" />
 	<meta property="og:description" content="Pearl Hacks rules and regulations." />
 	<meta property="og:updated_time" content="1439328118" />
 	<title>Pearl Hacks Rules and Regulations</title>
