--- a/about/maps/index.html
+++ b/about/maps/index.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="Pearl Hacks - Travel information" />
-	<meta property="og:site_name" content="Pearl Hacks 2016" />
-  <meta property="og:url" content="http://pearlhacks.com/about/travel" />
-	<meta property="og:description" content="Pearl Hacks travel grant information." />
+  <meta property="og:title" content="Pearl Hacks - Maps" />
+	<meta property="og:site_name" content="Pearl Hacks 2017" />
+  <meta property="og:url" content="http://pearlhacks.com/about/maps" />
+	<meta property="og:description" content="Pearl Hacks maps information." />
 	<meta property="og:updated_time" content="1439328118" />
 	<link rel="icon" href="../../ariel.png" type="image/x-icon" />
 	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-	<title>Travel grants for Pearl Hacks</title>
+	<title>Maps for Pearl Hacks</title>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<link rel="icon" href="../../images/ariel.png" type="image/png">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
