--- a/about/travel/index.html
+++ b/about/travel/index.html
@@ -120,7 +120,7 @@
 			<h2><strong>
 				Pearl Hacks Travel
 			</strong></h2>
-			<p>Here is all the information you need to make it to Chapel Hill on April 2nd - 3rd, 2016.</p>
+			<p>How do I make it to Pearl Hacks 2017?</p>
 		</div>
 	</div>
 	<div class="container">
@@ -128,22 +128,10 @@
 			<div class="col-xs-12">
 				<div class="panel panel-primary pearlhacks-panel">
 					<div class="panel-heading">
-						<h2>Location and parking</h2>
+						<h2>Location and Parking</h2>
 					</div>
 					<div class="panel-body">
-						<p>Pearl Hacks will be held in Genome Science Buildings on the campus of UNC Chapel Hill. The address of our venue is:</p>
-						<address>
-  					250 Bell Tower Road<br>
-  					Chapel Hill, NC 27599<br>
-  					</address>
-						<p>Free parking is available within easy walking distance of Pearl Hacks beginning at <b>5:00pm</b> Friday afternoon if you choose to arrive early.</p>
-						<ul class = "parking">
-							<li><a href="https://www.google.com/maps/dir/Bell+Tower+Parking+Deck,+Chapel+Hill,+NC+27514,+United+States/35.9097032,-79.0527534/@35.9085196,-79.0539276,17z/data=!4m9!4m8!1m5!1m1!1s0x89acc2eedc3bd00f:0x2dd3a16fc7f5b0c9!2m2!1d-79.0500869!2d35.9067152!1m0!3e2">Bell Tower Parking Deck</a></li>
-							<li><a href="https://www.google.com/maps/dir/Department+of+Computer+Science,+Chapel+Hill,+NC+27514/Cobb+Parking+Deck,+Chapel+Hill,+NC+27514/@35.9107855,-79.0515577,17z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x89acc2e89e40c0c1:0x38fa53cf078c0e56!2m2!1d-79.0531119!2d35.9097319!1m5!1m1!1s0x89acc2ea68ddf24b:0x38f6620f02eadfae!2m2!1d-79.0456262!2d35.9117533!3e2">Cobb Parking Deck</a></li>
-							<li><a href="https://www.google.com/maps/dir/35.9095348,-79.052167/35.9097177,-79.0527597/@35.9086153,-79.0552597,17z/data=!4m2!4m1!3e2">Venable Parking Lot</a></li>
-							<li><a href="https://www.google.com/maps/dir/35.9086992,-79.0555626/35.9097177,-79.0527597/@35.9095276,-79.0560474,18z/data=!4m2!4m1!3e2">Nash Parking Lot</a></li>
-							<li><a href="https://www.google.com/maps/dir/35.9077494,-79.0538099/35.9097177,-79.0527597/@35.9087812,-79.0552089,17z/data=!4m2!4m1!3e2">FedEx Global Education Center Parking Deck</a></li>
-						</ul>
+						<p>Come back in the future for more information!</p>
 					</div>
 				</div>
 			</div>
@@ -191,82 +179,54 @@
 			<div class="col-xs-12 col-sm-6">
 				<div class="panel panel-primary pearlhacks-panel">
 					<div class="panel-heading">
-						<h2>Large Vans</h2>
+						<h2>Charter Buses</h2>
 					</div>
 					<div class="panel-body">
-						<p>Contact us if you are looking to coordinate a van of 6 or more. Email hello@pearlhacks.com with the subject title "Large Van Carpool". The process of receiving your grant is similar to normal carpools.</p>
+						<p>We will be offering buses this year! Stay tuned for the routes and how to get on one!</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6">
 				<div class="panel panel-primary pearlhacks-panel">
 					<div class="panel-heading">
-						<h2>International travel</h2>
+						<h2>Flights</h2>
+					</div>
+					<div class="panel-body">
+						<p>We will be offering flight reimbursements on a first come first serve basis with the amount reimbursed
+						   affected by distance traveled. A base amount will be released at a later date.
+						   To request a flight reimbursement or you have any questions about the process, 
+						   please email us at hello@pearlhacks.com</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12 col-sm-6">
+				<div class="panel panel-primary pearlhacks-panel">
+					<div class="panel-heading">
+						<h2>International Travel</h2>
 					</div>
 					<div class="panel-body">
 						<p>We love international participants!
 							Unfortunately, Pearl Hacks cannot provide assistance for international travel or visa paperwork.
 							However, if you do make it to Pearl Hacks, send us an e-mail with subject line: "International Participant".
-							The transportation team would love to show you around Chapel Hill if time permits!</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-12 col-sm-6">
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
-						<h2>Chartered Buses</h2>
-					</div>
-					<div class="panel-body">
-						<p>Pearl Hacks will be sending buses that will be making stops at the following locations:
-							<ul class="buspool">
-								<li>NY - NC: New York University -> Rutgers University(NJ) -> Howard University(DC) -> University of Virginia(VA) -> UNC Chapel Hill</li>
-								<li>MD - NC: University of Maryland at College Park(MD) -> UNC Chapel Hill</li>
-							</ul>
-							Bus seats are allocated for the first 48-56 participants who signed up and indicated that
-							they will be traveling from the states we are providing buses for. You need not be students from
-							universities the buses will be making a stop at. If you signed up late, don't worry. Typically,
-							not all participants who signed up would go and chances are there will be bus seats available for you.
-							We are currently organizing buses for Georgia and Florida participants. The route we are planning for the bus is
-							University of Florida(FL) -> Georgia Tech (GA) -> UNC Chapel Hill. Please stay in tune for updates.
+							The transportation team would love to show you around Chapel Hill if time permits!
 						</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6">
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
-						<h2>Other transit options</h2>
-					</div>
-					<div class="panel-body">
-						<p>Flight reimbursements are very limited. Unfortunately, we will not be providing flight reimbursements for people
-						from states we are providing buses to. If you do require a flight reimbursement,
-						please send us an e-mail at hello@pearlhacks.com with subject line: "Flight Reimbursement".
-						State the city and state you will be traveling from and
-						attach a link to a 30-second video or a 150 words max response on what
-						interests you about computer science and what you hope to do with it in the future!
-						Someone from the transportation team will reach out to you within a week, and you will have another week
-						to submit your flight receipts. You will also be required to submit an additional of 2-3 forms in order to
-						receive grants from us. Due to our limited budget, we are very unlikely to reimburse more than $150 per person for flights.
-						However, we will review flight reimbursements on a case-by-case basis and we will try our best to help you out!
-						</p>
-					</div>
-				</div>
-			</div>
-
-		</div>
-		<div class="row">
-			<div class="col-xs-12">
 				<div class="panel panel-primary pearlhacks-panel">
 					<div class="panel-heading">
 						<h2>Questions?</h2>
 					</div>
 					<div class="panel-body">
-						<p>If you have any questions please email us at hello@pearlhacks.com.</p>
+						<p>If you have any questions, please email us at hello@pearlhacks.com
+						</p>
 					</div>
 				</div>
 			</div>
+
 		</div>
 	</div>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
