background image and header changes

--- a/index.html
+++ b/index.html
@@ -41,88 +41,90 @@
 </head>
 
 <body>
-	<div id="nav-wrapper">
-		<nav id="nav" class="navbar navbar-default pearlhacks-navbar">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="index.html">Pearl Hacks <span class="sr-only">(current)</span></a>
-				</div>
-				<div class="collapse navbar-collapse" id="navbar-collapse">
-					<ul class="nav navbar-nav">
-						<li>
-            			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-							About <span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-							<li><a href="./about/travel/index.html">Travel</a></li>
-							<li><a href="./about/rules/index.html">Guidelines</a></li>
-							<li><a href="./about/maps/index.html">Maps</a></li>
-							<li><a href="./about/prizes/index.html">Prizes</a></li>
-						</ul>
-						</li>
-						<li>
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-								Register<span class="caret"></span>
+	<div id="frontPage" class="jumbotron">
+		<div id="nav-wrapper">
+			<nav id="nav" class="navbar navbar-default pearlhacks-navbar">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="index.html">Pearl Hacks <span class="sr-only">(current)</span></a>
+					</div>
+					<div class="collapse navbar-collapse" id="navbar-collapse">
+						<ul class="nav navbar-nav">
+							<li>
+	            			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+								About <span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu">
-							<li><a href="./apply/participant.html" target="_blank">Participant</a></li>
-							<li><a href="./apply/volunteer.html" target="_blank">Volunteer</a></li>
-							<li><a href="./apply/mentor.html" target="_blank">Mentor</a></li>
-						</ul>
-						</li>
-						<li>
-							<a href="./learn/index.html">Learn</a>
-						</li>
-						<li>
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-							Schedule <span class="caret"></span>
-						</a>
-							<ul class="dropdown-menu">
-							<li><a href="#">Events</a></li>
-							<li><a href="#">Workshops</a></li>
-							<li><a href="#">Tech Talks</a></li>
-						</ul>
-						</li>
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More... <span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li>
-									<a href="mailto:hello@pearlhacks.com">Contact us</a>
-								</li>
-								<li role="separator" class="divider"></li>
-								<li>
-									<a href="http://mlh.io">Major League Hacking</a>
-								</li>
+								<li><a href="./about/travel/index.html">Travel</a></li>
+								<li><a href="./about/rules/index.html">Guidelines</a></li>
+								<li><a href="./about/maps/index.html">Maps</a></li>
+								<li><a href="./about/prizes/index.html">Prizes</a></li>
 							</ul>
-						</li>
-					</ul>
+							</li>
+							<li>
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+									Register<span class="caret"></span>
+								</a>
+								<ul class="dropdown-menu">
+								<li><a href="./apply/participant.html" target="_blank">Participant</a></li>
+								<li><a href="./apply/volunteer.html" target="_blank">Volunteer</a></li>
+								<li><a href="./apply/mentor.html" target="_blank">Mentor</a></li>
+							</ul>
+							</li>
+							<li>
+								<a href="./learn/index.html">Learn</a>
+							</li>
+							<li>
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+								Schedule <span class="caret"></span>
+							</a>
+								<ul class="dropdown-menu">
+								<li><a href="#">Events</a></li>
+								<li><a href="#">Workshops</a></li>
+								<li><a href="#">Tech Talks</a></li>
+							</ul>
+							</li>
+						</ul>
+						<ul class="nav navbar-nav navbar-right">
+							<li>
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More... <span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<li>
+										<a href="mailto:hello@pearlhacks.com">Contact us</a>
+									</li>
+									<li role="separator" class="divider"></li>
+									<li>
+										<a href="http://mlh.io">Major League Hacking</a>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
 				</div>
-			</div>
-		</nav>
-	</div>
-	<header class="full-height">
-		<div class="jumbotron">
-			<div id ="pearlHacks">
-        <p><a href="index.html">Pearl Hacks</a><br>
-        April 2nd - 3rd, 2016<br>
-        University of North Carolina at Chapel Hill</p>
-			  <img id="ariel" src="images/ariel.png">
-      </div>
+			</nav>
 		</div>
-	</header>
+		<header class="full-height">
+			<div class="jumbotron">
+				<div class="tintOverlay"></div>
+				<div id ="pearlHacks">
+				  <img id="ariel" src="images/ariel.png">
+	      </div>
+			</div>
+		</header>
+	</div>
 	<div class="jumbotron">
 		<div id="content" class="container">
 			<div id="welcome" class="row">
-				<div class="col-xs-12 col-md-8">
+				<div class="leftHeader teal">
 					<h2><strong>Welcome to Pearl Hacks!</strong></h2>
+				</div>
+				<div class="col-xs-12 col-md-8">
 					<p>Pearl Hacks is an all-female hackathon aimed towards creating an encouraging environment for women of all skill levels to pursue their interests in technology. Hosted at the University of North Carolina at Chapel Hill, for 24 hours you will build projects with peers and mentors about topics that spark your interests. Whether you are a master in heels and Java or you have yet to write your first "Hello World" program, we welcome you all. Look forward to participating in workshops for aspiring and experienced programmers. If advancing your knowledge of computer science isn't enough, we'll have plenty of free food, free shirts, and free swag. What's stopping you? Get ready for a weekend with phenomenal women you will never forget at Pearl Hacks! </p>
 				</div>
 				<div class="col-xs-12 col-md-4">
@@ -145,7 +147,9 @@
 	</div>
 	<div class="container" style="width:100%">
 		<div id="faq" class="row">
-			<h2>Frequently asked questions</h2>
+			<div class="leftHeader purple">
+				<h2><strong>Frequently asked questions</strong></h2>
+			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
 				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
 					<div class="panel-body FAQ_text">
