--- a/about/prizes/index.html
+++ b/about/prizes/index.html
@@ -91,9 +91,9 @@
 							Schedule <span class="caret"></span>
 						</a>
 							<ul class="dropdown-menu">
-							<li><a href="../schedule/events/index.html">Events</a></li>
-							<li><a href="../schedule/workshops/index.html">Workshops</a></li>
-							<li><a href="../schedule/techtalks/index.html">Tech Talks</a></li>
+							<li><a href="../../schedule/events/index.html">Events</a></li>
+							<li><a href="../../schedule/workshops/index.html">Workshops</a></li>
+							<li><a href="../../schedule/techtalks/index.html">Tech Talks</a></li>
 						</ul>
 						</li>
 					</ul>
